more logging in scenario